# wauzcmd

./: Cargo.toml  README.md
src/: app.rs  console.rs  core1.rs  extensions.rs  filesystem.rs  helper.rs  main.rs  platform.rs  powershell.rs  types.rs  unzip.rs  windows.rs
